--- a/app/src/main/res/layout/troupe_item.xml
+++ b/app/src/main/res/layout/troupe_item.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/titleTxt"
+                android:id="@+id/actorsName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
@@ -31,7 +31,7 @@
                 android:gravity="center"
                 android:text='@{troupe.name}'
                 android:textAppearance="?android:textAppearanceLarge"
-                android:textColor="@color/titleColor"
+                android:textColor="@color/colorPrimary"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/perf_image"
@@ -59,7 +59,7 @@
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/perf_image"
-                app:layout_constraintTop_toBottomOf="@+id/titleTxt" />
+                app:layout_constraintTop_toBottomOf="@+id/actorsName" />
 
             <TextView
                 android:id="@+id/textView"
@@ -67,7 +67,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:text="@string/details"
-                android:textColor="@color/titleColor"
+                android:textColor="@color/colorPrimary"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/descTxt" />
