--- a/app/src/main/res/layout/actors_view_item.xml
+++ b/app/src/main/res/layout/actors_view_item.xml
@@ -29,7 +29,7 @@
                 android:layout_gravity="center_horizontal"
                 android:scaleType="fitXY"
                 android:src="@drawable/ic_face_black_24dp"
-                app:imageUrl="@{actorsInfo.image}"
+                app:imageActorsUrl="@{actorsInfo.image}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
