--- a/app/src/main/res/layout/activity_performance_detail.xml
+++ b/app/src/main/res/layout/activity_performance_detail.xml
@@ -5,9 +5,8 @@
 
     <data>
 
-        <variable
-            name="performance"
-            type="com.example.teatrnachaynoy.Performance" />
+        <variable name="performance" type="com.example.teatrnachaynoy.Performance" />
+        <variable name="text" type="com.example.teatrnachaynoy.MakeLinksClicable" />
     </data>
 
     <ScrollView
@@ -85,7 +84,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="4dp"
-                    android:textAppearance="?android:textAppearanceMedium"
+                    android:textAppearance="?android:textAppearanceSmall"
                     android:text='@{performance.genre}'
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/perf_image" />
@@ -96,7 +95,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="4dp"
-                    android:textAppearance="?android:textAppearanceMedium"
+                    android:textAppearance="?android:textAppearanceSmall"
                     android:text='@{performance.duration}'
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/perf_genre" />
@@ -107,7 +106,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="4dp"
-                    android:text='@{performance.description}'
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/perf_duration" />
             </androidx.constraintlayout.widget.ConstraintLayout>
