--- a/app/src/main/res/layout/activity_performance_detail.xml
+++ b/app/src/main/res/layout/activity_performance_detail.xml
@@ -41,6 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorWhite"
+                android:elevation="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -114,6 +115,7 @@
                 android:id="@+id/secondInsideLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:elevation="5dp"
                 android:layout_marginTop="16dp"
                 android:background="@color/colorWhite"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -177,6 +179,7 @@
                 android:id="@+id/thirdInsideLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:elevation="5dp"
                 android:layout_marginTop="16dp"
                 android:background="@color/colorWhite"
                 app:layout_constraintEnd_toEndOf="parent"
